pdns-admin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: powerdns-admin
spec:
  selector:
    matchLabels:
      app: powerdns-admin
  replicas: 1
  template:
    metadata:
      labels:
        app: powerdns-admin
    spec:
      containers:
        - name: powerdns-admin
          image: ngoduykhanh/powerdns-admin:latest
          securityContext:
            allowPrivilegeEscalation: false
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: "250m"
              memory: "128Mi"
      restartPolicy: Always
      automountServiceAccountToken: false
