pdns-admin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: powerdns-admin
spec:
  ports:
    - name: tcp-http
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: powerdns-admin
  type: ClusterIP
